@@ -7,6 +7,7 @@ TBC - 0.48.0
 - [CHANGED] - Omnirig Drivers: Removed QT AXContainers - pure Windows API code
 - [CHANGED] - Enabled Chekbox in Alerts Table (issue #867)
 - [CHANGED] - Serial Port Completer contains Horizontal ScrollBar
+- [CHANGED] - TCI - Settings - Default PWR defines the maximum output power
 - Fixed Omnirig drivers keep sending frequency change (issue #872)
 - Fixed ADIF import does not accept a default operator name (issue #884)
 - Fixed HamQTH URL from http to https (PR #886 @aa5sh)
